Adding esling config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -154,6 +154,7 @@
     "prefer-rest-params": ["error"],
     "prefer-spread": ["error"],
     "rest-spread-spacing": ["error", "never"],
-    "template-curly-spacing": ["error", "never"]
+    "template-curly-spacing": ["error", "never"],
+    "import/no-duplicates": 0
   }
 }
